# projeto-pp-ufabc

./: README.md
haskell/: CHANGELOG.md  dadosFinais.csv  demanda.cabal  demandas.csv
haskell/app/: Dados.hs  Grafico.hs  Main.hs  Util.hs
